--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -18,9 +18,9 @@
         <h1>My Blog</h1>
         <nav>
             <a href="/">Home</a>
-            <a href="{% url 'users:login' %}">Login</a>
-            <a href="{% url 'users:registration'  %}">Register</a> 
-            <a href="{% url 'users:logout' %}">Logout</a>
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'registration'  %}">Register</a> 
+            <a href="{% url 'logout' %}">Logout</a>
         </nav>
     </header>
     <main>
